# cuda-opengl-interop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: callbacks.h  cuda_kernels.cuh  cuda_utils.cuh  gl_setup.h  shader_utils.h
shaders/: basic.frag  basic.vert
src/: callbacks.cpp  cuda_kernels.cu  main.cpp  shader_utils.cpp
